--- a/css/style.css
+++ b/css/style.css
@@ -247,3 +247,21 @@ body{
     width: 200px;
     padding: 5px;
 }
+
+.proimg{
+    width: 300px;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 2px solid black;
+    border-radius: 15px;
+    overflow: hidden;
+    background-position: center center;
+}
+
+.productdetails{
+    font-weight: bold;
+    font-size: 20px;
+    text-align: left;
+    text-transform: capitalize;
+}
