--- a/css/style.css
+++ b/css/style.css
@@ -248,20 +248,70 @@ body{
     padding: 5px;
 }
 
-.proimg{
-    width: 300px;
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 2px solid black;
-    border-radius: 15px;
-    overflow: hidden;
-    background-position: center center;
+.mycontainer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.productdetails{
+.mycontainer .myrow{
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.mycontainer .myrow .mycol{
+    width: 33.33%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.mycontainer .myrow .mycol .proimg{
+    width: 100%;
+    height: 200px;
+    border-radius: 15px;
+    overflow: hidden;
+    border: 2px solid black;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.mycontainer .myrow h1{
+    margin-bottom: 25px;
+} 
+
+.mycontainer .myrow .mycol .details{
     font-weight: bold;
     font-size: 20px;
     text-align: left;
+    width: 100%;
     text-transform: capitalize;
+}
+
+.mycontainer .myrow .mycol .details input{
+    width: 100%;
+    outline: none;
+    border: none;
+    background: none;
+    border-bottom: 2px solid black;
+}
+
+.mycontainer .myrow .mycol .details textarea{
+    width: 100%;
+    outline: none;
+    border: none;
+    background: none;
+    border-bottom: 2px solid black;
+    height: 200px;
 }
