--- a/css/style.css
+++ b/css/style.css
@@ -228,8 +228,10 @@ body{
     border: none;
 }
 
-#form h1{
+#form h2{
     margin-bottom: 15px;
+    width: 100%;
+    text-align: center;
 }
 
 .card-body{
