--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5902,7 +5902,7 @@ a.close.disabled {
   opacity: 1;
 }
 
-.toast.hide {
+.toast.fadeOut {
   display: none;
 }
 
@@ -10169,7 +10169,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: rgba(255, 255, 255, 0.5) !important;
 }
 
-.text-hide {
+.text-fadeOut {
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
