--- a/css/style.css
+++ b/css/style.css
@@ -320,3 +320,18 @@ body{
     border-bottom: 2px solid black;
     height: 200px;
 }
+
+.bg-dark{
+    background-color: #000000 !important;
+}
+
+.navbar-dark .navbar-nav .nav-link{
+    color: white;   
+}
+
+.col-md-3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+}
